package usantatecla.mastermind.views.graphics;

import usantatecla.mastermind.models.Result;

class ResultView {

	private final Result result;

	ResultView(Result result) {
		this.result = result;
	}

	void writeln() {
	}

}
